--- a/src/components/EmotionItem.css
+++ b/src/components/EmotionItem.css
@@ -8,22 +8,27 @@
 
 .EmotionItem_on_1{
     background-color: rgb(100,201,100);
+    color:white;
 }
 
 .EmotionItem_on_2{
     background-color: rgb(157,215,114);
+    color:white;
 }
 
 .EmotionItem_on_3{
     background-color: rgb(253,206,23);
+    color:white;
 }
 
 .EmotionItem_on_4{
     background-color: rgb(253,132,70);
+    color:white;
 }
 
 .EmotionItem_on_5{
     background-color: rgb(253,86,95);
+    color:white;
 }
 
 .EmotionItem >img{ 
